@@ -230,6 +230,16 @@ because of Phabricator reports.
 * Deprecated null fallbacks in PasswordReset constructor have been removed.
 * User::isEveryoneAllowed and User::getAllRights, deprecated in 1.34, has been
   removed.
+* The following methods of the UserGroupMembership class, deprecated in 1.35,
+  has been removed:
+  - ::initFromRow
+  - ::newFromRow - use UserGroupManager::newGroupMembershipFromRow
+  - ::selectFields - use UserGroupManager::getQueryInfo
+  - ::delete - use UserGroupManager::removeUserFromGroup
+  - ::insert - use UserGroupManager::addUserToGroup
+  - ::purgeExpired - use UserGroupManager::purgeExpired
+  - ::getMembershipsForUser - use UserGroupManager::getUserGroupMemberships
+  - ::getMembership - use UserGroupManager::getUserGroupMemberships
 * …
 
 === Deprecations in 1.36 ===
